--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">GameFrame</string>
+    <string name="setup">Setup</string>
+    <string name="ip_separator">.</string>
+    <string name="enter_ip_address">Enter IP address</string>
+    <string name="setup_ip_address">Setup IP address</string>
+    <string name="success">Success</string>
+    <string name="operation_failed">Operation failed</string>
+    <string name="power">Power</string>
+    <string name="menu">Menu</string>
 </resources>
