--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="next">Next</string>
     <string name="discover_game_frame_ip">Discover Game Frame IP</string>
     <string name="game_frame_ip_found">Game Frame IP found</string>
+    <string name="playback_mode">Playback Mode</string>
 </resources>
