Cycle interval setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="discover_game_frame_ip">Discover Game Frame IP</string>
     <string name="game_frame_ip_found">Game Frame IP found</string>
     <string name="playback_mode">Playback Mode</string>
+    <string name="cycle_interval">Cycle Interval</string>
 </resources>
