--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="playback_mode">Playback Mode</string>
     <string name="cycle_interval">Cycle Interval</string>
     <string name="display_mode">Display Mode</string>
+    <string name="clock_face">Clock Face</string>
 </resources>
