Displaying current ip address during discovery and styling the toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="cycle_interval">Cycle Interval</string>
     <string name="display_mode">Display Mode</string>
     <string name="clock_face">Clock Face</string>
+    <string name="trying_to_find_game_frame">Trying to find the Game Frame on your local network</string>
 </resources>
