Showing an error on main screen when ip address is missing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="display_mode">Display Mode</string>
     <string name="clock_face">Clock Face</string>
     <string name="trying_to_find_game_frame">Trying to find the Game Frame on your local network</string>
+    <string name="game_frame_ip_not_found">Game Frame IP not found.\nSet it up now?</string>
 </resources>
