--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="clock_face">Clock Face</string>
     <string name="trying_to_find_game_frame">Trying to find the Game Frame on your local network</string>
     <string name="game_frame_ip_not_found">Game Frame IP not found.\nSet it up now?</string>
+    <string name="manage">Manage</string>
+    <string name="draw">Draw</string>
 </resources>
