Quick setting tile to toggle power on N devices

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="success">Success</string>
     <string name="operation_failed">Operation failed</string>
     <string name="power">Power</string>
+    <string name="game_frame_power">Game Frame Power</string>
     <string name="menu">Menu</string>
     <string name="next">Next</string>
     <string name="discover_game_frame_ip">Discover Game Frame IP</string>
