Replacing existing drawing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="upload">Upload</string>
     <string name="enter_name_for_drawing">Enter name for the drawing</string>
     <string name="name_of_drawing">Name of drawing</string>
+    <string name="replace">Replace</string>
+    <string name="already_exists">Drawing already exists.</string>
 </resources>
