Pallete color change on long press

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="name_of_drawing">Name of drawing</string>
     <string name="replace">Replace</string>
     <string name="already_exists">Drawing already exists.</string>
+    <string name="change_color">Change color</string>
 </resources>
