Added undo/redo (no limits for now, will introduce later)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="blend_mode">Blend Mode</string>
     <string name="composition_operator">Composition Operator</string>
     <string name="layer_settings">Layer settings</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 </resources>
