--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="title">Title</string>
     <string name="tools">Tools</string>
     <string name="change_tool">Change tool:</string>
+    <string name="display_layer_borders">Display layer borders</string>
 </resources>
