--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="unsaved_changes">There are unsaved changes. Are you sure you want to dismiss them?</string>
     <string name="do_not_dismiss">Do not dismiss</string>
     <string name="tool_not_for_background">This tool cannot be applied to the background layer</string>
+    <string name="background">Background</string>
 </resources>
