--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,5 @@
     <string name="tool_not_for_background">This tool cannot be applied to the background layer</string>
     <string name="background">Background</string>
     <string name="layer_borders_displaying">Displaying layer borders</string>
-    <string name="layer_borders_not_displaying">Not displaying layer borders</string>
+    <string name="layer_borders_not_displaying">Hiding layer borders</string>
 </resources>
