Displaying palette name on workspace

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="background">Background</string>
     <string name="layer_borders_displaying">Displaying layer borders</string>
     <string name="layer_borders_not_displaying">Hiding layer borders</string>
+    <string name="palette_name">Palette: %1$s</string>
 </resources>
