--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="play_store">Play Store</string>
     <string name="cancel">Cancel</string>
     <string name="export_image">Export image</string>
+    <string name="changelog">Changelog</string>
 </resources>
