--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,6 @@
     <string name="cancel">Cancel</string>
     <string name="export_image">Export image</string>
     <string name="changelog">Changelog</string>
+    <string name="wifi_not_enabled">Wifi is not enabled</string>
+    <string name="enable">Enable</string>
 </resources>
