--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,6 @@
     <string name="changelog">Changelog</string>
     <string name="wifi_not_enabled">Wifi is not enabled</string>
     <string name="enable">Enable</string>
+    <string name="feedback">Feedback</string>
+    <string name="unknown_error">Something unexpected went wrong.</string>
 </resources>
