--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,14 @@
     <string name="enable">Enable</string>
     <string name="feedback">Feedback</string>
     <string name="unknown_error">Something unexpected went wrong.</string>
+    <string name="account">Account</string>
+    <string name="select_login_provider">Select one of the providers to log in</string>
+    <string name="google">Google</string>
+    <string name="hello_name">Hello \n%s</string>
+    <string name="log_out">Log out</string>
+    <string name="delete_account">Delete Account</string>
+    <string name="log_in">Log in</string>
+    <string name="log_in_upsell">Looks you are not logged in.\nLog in to synchronize your drawings so you never lose them</string>
+    <string name="sign_in_error">Something went wrong. Try again.</string>
+    <string name="delete_account_verification">Are you sure you want to delete your account? This is irreversible. All your online saved drawings will be lost</string>
 </resources>
