--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,12 @@
     <string name="log_in_upsell">Looks you are not logged in.\nLog in to synchronize your drawings so you never lose them</string>
     <string name="sign_in_error">Something went wrong. Try again.</string>
     <string name="delete_account_verification">Are you sure you want to delete your account? This is irreversible. All your online saved drawings will be lost</string>
+    <string name="upload_saved_projects">Upload saved projects</string>
+    <string name="upload_saved_projects_description">Would you like to upload your saved projects to your account? (CAREFUL! existing projects on your account will be overridden by local ones if they have the same name)</string>
+    <string name="skip">Skip</string>
+    <string name="projects_upload_finished">Projects uploaded successfully</string>
+    <string name="projects_failed_to_upload">Some (or all) projects failed to upload</string>
+    <string name="projects_upload_started">Started uploading projects</string>
+    <string name="re_upload_projects">Re-upload local projects</string>
+    <string name="no_projects_to_upload">There are no saved projects to upload</string>
 </resources>
