--- a/infra/src/main/res/values/strings.xml
+++ b/infra/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="unknown_error">Something unexpected went wrong.</string>
     <string name="operation_failed">Operation failed</string>
     <string name="feedback">Feedback</string>
+    <string name="success">Success</string>
 </resources>
