--- a/widget/src/main/res/values/strings.xml
+++ b/widget/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="error_communicating">There was an error communicating with the GameFrame</string>
+    <string name="power">Power</string>
 </resources>
