--- a/ip/src/main/res/values/strings.xml
+++ b/ip/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="trying_to_find_game_frame">Trying to find the Game Frame on your local network</string>
     <string name="game_frame_ip_found">Game Frame IP found</string>
     <string name="ip_separator">.</string>
+    <string name="discover_game_frame_ip">Discover Game Frame IP</string>
 </resources>
