Fixing release builds and removing keys not used

--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="manage">Manage</string>
     <string name="draw">Draw</string>
+    <string name="power">Power</string>
 </resources>
